# visual_programming

./: .rosinstall  .rosinstall_hardware  README.md  python_dependencies.txt  requirements.txt
ros_fsm/: README.md
ros_fsm/ros_fsm_core/: CMakeLists.txt  package.xml
ros_fsm/ros_fsm_core/include/ros_fsm_core/: state_machine_definitions.h
ros_fsm/ros_fsm_core/src/: state_machine_definitions.cpp
vpr_core/: CMakeLists.txt  package.xml
vpr_core/include/vpr_core/states/: action_codes.h  bringup_state.h  continuous_edit_state.h  edit_state.h  execute_state.h  faulted_state.h  move_home_state.h  preview_state.h  tracking_state.h
vpr_core/scripts/: fake_waypoint_edit_server.py
vpr_core/src/: action_codes.cpp  bringup_state.cpp  continuous_edit_state.cpp  edit_state.cpp  execute_state.cpp  faulted_state.cpp  move_home_state.cpp  preview_state.cpp  tracking_state.cpp  vpr_executive.cpp
vpr_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
vpr_moveit_config/config/: fake_controllers.yaml  kinematics.yaml  ompl_planning.yaml  workcell.srdf
vpr_moveit_config/launch/: demo.launch  fake_moveit_controller_manager.launch.xml  move_group.launch  moveit_planning_execution.launch  moveit_rviz.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  sensor_manager.launch.xml  setup_assistant.launch  trajectory_execution.launch.xml
vpr_msgs/: CMakeLists.txt  package.xml
vpr_msgs/msg/: TrajectorySegment.msg  TrajectoryWaypoint.msg  VprErrorCode.msg
vpr_msgs/srv/: EditPathWaypoints.srv  PlanTrajectories.srv  ProcessAction.srv
vpr_support/: CMakeLists.txt  package.xml
vpr_support/launch/: display.launch  realsense_bringup.launch
vpr_support/meshes/: DodecahedronWithRod.STL  TEACH_EEF.STL  teachbox.STL
vpr_support/rviz/: tool_tracker.rviz  urdf.rviz  workcell.rviz
vpr_support/urdf/: workcell.urdf.xacro
vpr_tracking/: CMakeLists.txt  package.xml
vpr_tracking/cfg/: ToolTracker.cfg
vpr_tracking/config/: input_states_info.yaml  joystick_cfg_fortune_tech_vr30.yaml  joystick_cfg_grifta_mg.yaml  localization_info.yaml  snap_features.yaml
vpr_tracking/include/vpr_tracking/: path_data_manager.h  snap_features.h  tool.h  tool_tracker.h  utils.h
vpr_tracking/launch/: application_run.launch  application_setup.launch  calibration.launch  localizer_test.launch  path_manager.launch  tool_tracker.launch
vpr_tracking/rviz/: tool_verification.rviz  tracking.rviz
vpr_tracking/scripts/: joystick_action_mapper.py  key_action_mapper.py  keyboard_publisher.py  object_localizer.py  tf_publisher_gui.py
vpr_tracking/src/: path_data_manager.cpp  path_data_manager_node.cpp  snap_features.cpp  tool.cpp  tool_tracker.cpp  tool_tracking_node.cpp  utils.cpp
vpr_tracking/test/: test_tool_tracker.cpp
vpr_tracking/urdf/: aruco_marker.xacro  cube_wand.urdf.xacro  dodecahedron_wand.urdf.xacro  flat_sheet.urdf.xacro
vpr_trajectory/: CMakeLists.txt  package.xml
vpr_trajectory/include/vpr_trajectory/: mtc_planner.h  trajectory_planner.h
vpr_trajectory/include/vpr_trajectory/stages/: plan_toolpath.h
vpr_trajectory/src/: mtc_planner.cpp  trajectory_planner.cpp  trajectory_planner_node.cpp
vpr_trajectory/src/stages/: plan_toolpath.cpp
