<?xml version="1.0"?>
<package format="2">
  <name>vpr_core</name>
  <version>0.0.0</version>
  <description>The vpr_core package</description>
  <maintainer email="jrgnichodevel@gmail.com">Jorge Nicho</maintainer>
  <license>TODO</license>
  <author email="jrgnichodevel@gmail.com">Jorge Nicho</author>
  
  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>vpr_msgs</depend>
  <depend>ros_fsm_core</depend>
  
  <!-- The export tag contains other, unspecified, tags -->
  <export>
  </export>
</package>
