<?xml version="1.0"?>
<package format="2">
  <name>vpr_msgs</name>
  <version>0.0.0</version>
  <description>The vpr_msgs package</description>
  <maintainer email="jrgnichodevel@gmail.com">Jorge Nicho</maintainer>
  <license>TODO</license>
  <author email="jrgnichodevel@gmail.com">Jorge Nicho</author>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>std_msgs</depend>  
  <depend>actionlib</depend>  
  <depend>actionlib_msgs</depend>  
  <depend>geometry_msgs</depend> 
  <depend>moveit_msgs</depend>
  <depend>message_generation</depend>
  <exec_depend>message_runtime</exec_depend>



  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
