<?xml version="1.0"?>
<package format="2">
  <name>vpr_tracking</name>
  <version>0.0.0</version>
  <description>The vpr_tracking package</description>
  <maintainer email="josh.langsfeld@swri.org">Josh Langsfeld</maintainer>
  <license>Apache2</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>aruco_msgs</depend>
  <depend>vpr_msgs</depend>
  <depend>xmlrpcpp</depend>
  <depend>std_srvs</depend>
  <depend>visualization_msgs</depend>
  <depend>eigen_conversions</depend>
  <depend>moveit_core</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>dynamic_reconfigure</depend>
  <depend>sensor_msgs</depend>
  <depend>jsk_rviz_plugins</depend>
  <exec_depend>rospy</exec_depend>
  <export>
  </export>
</package>
